# liftoff-companion

./: AGENTS.md  LICENSE  README.md  package-lock.json  package.json
design-mocks/: settings-redesign.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/capture/: auto.rs  integrity.rs  marker.rs  mod.rs  rawcap.rs  recorder.rs  stats.rs
src-tauri/src/commands/: capture_commands.rs  mod.rs  processing_commands.rs  setup_commands.rs
src-tauri/src/gamelog/: mod.rs  segment.rs  sink.rs  tailer.rs
src-tauri/src/liftoff/: assets.rs  geometry.rs  mod.rs  paths.rs  player_log.rs  telemetry_config_writer.rs
src-tauri/src/processing/: collisions.rs  job.rs  mod.rs  pipeline.rs  profile.rs  replay.rs  segmentation.rs  timing.rs
src-tauri/src/storage/: db.rs  migrations.rs  mod.rs  repositories.rs
src-tauri/src/storage/migrations/: 001_initial.sql  002_race_sessions.sql  003_game_asset_cache.sql  004_collision_metrics.sql  005_collision_geometry_cache.sql  006_race_timing.sql
src-tauri/src/telemetry/: liftoff_schema.rs  mod.rs  parser.rs  sample.rs
src-tauri/tests/: gamelog_segmentation.rs  recorder_integration.rs
src/components/: Combobox.tsx  ConfirmButton.tsx  FlightRecorderChart.tsx  InstallCard.tsx  Page.tsx  PageHeader.tsx  Panel.tsx  SegBadge.tsx  SessionCourseMap.tsx  SessionSpeedChart.tsx  Stat.tsx  StatusBar.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  separator.tsx  (+1 more)
src/lib/: ErrorBoundary.tsx  api.ts  assetStatus.ts  collisions.ts  events.ts  liftoffData.ts  types.ts  useLiveCapture.ts  useProcessingStatus.ts
src/pages/: CaptureDetail.tsx  DatasetSummary.tsx  FlightPath.tsx  Processing.tsx  RaceDetail.tsx  Races.tsx  Sessions.tsx  Setup.tsx
(+4 files in other folders)
