[package]
name = "liftoff-companion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
edition = "2021"
default-run = "liftoff-companion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liftoff_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "liftoff-companion"
path = "src/main.rs"

[[bin]]
name = "fake_liftoff"
path = "src/bin/fake_liftoff.rs"

[[bin]]
name = "fake_gamelog"
path = "src/bin/fake_gamelog.rs"

[[bin]]
name = "inspect_unity_asset"
path = "src/bin/inspect_unity_asset.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "fs", "time", "macros", "io-util", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
blake3 = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
byteorder = "1"
dirs = "5"
unity-asset = { version = "0.2.0", default-features = false }
unity-asset-binary = { version = "0.2.0", default-features = false, features = ["mmap"] }
